--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,14 @@
       "logo": "https://www.hukitola.com/hukitolalogo.jpg,
       "sameAs": [
         "https://www.linkedin.com/company/hukitola09",
-      ]
+      ],
+      "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+91-9078064335",
+    "contactType": "Customer Support",
+    "areaServed": "IN",
+    "availableLanguage": ["English", "Hindi"]
+  },
     }
   </script>
 
