--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,7 @@
 
    <!-- Favicon -->
   <link rel="icon" href="/hukitolalogo.jpg" type="image/jpeg" />
+<!-- <script src="https://cdn.jsdelivr.net/npm/@vapi-ai/web/dist/vapi.js"></script> -->
 
   <!-- Structured Data -->
   <script type="application/ld+json">
